recommit old notebooks

--- a/notebooks/c_elegans_tsne_ncvis_umap.ipynb
+++ b/notebooks/c_elegans_tsne_ncvis_umap.ipynb
@@ -38,10 +38,7 @@
     "from firelight.visualizers.colorization import get_distinct_colors"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -53,15 +50,12 @@
     "fig_path = get_path(\"figures\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# parameters for all methods\n",
@@ -75,10 +69,7 @@
     "dataset = \"c_elegans\""
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -92,10 +83,7 @@
     "plt.rcParams['font.serif'] = \"Times New Roman\"\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -115,20 +103,17 @@
     "print(x.shape)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "unnamed_label = 36\n",
     "\n",
-    "np.random.seed(seed)\n",
+    "np.random.seed(0)\n",
     "colors = get_distinct_colors(len(np.unique(y)))\n",
     "np.random.shuffle(colors)\n",
     "colors[unnamed_label] = [0.5, 0.5, 0.5]\n",
@@ -137,21 +122,18 @@
     "special_order = np.argsort(y != unnamed_label, kind=\"stable\") # put idx of unnamed label to the front\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:>"
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -171,10 +153,7 @@
     "plot_scatter(plt.gca(),pca2_rescaled[special_order], y[special_order], cmap=cmap)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -185,10 +164,7 @@
     "## tsne"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -215,10 +191,7 @@
     "affinities_tSNE.P = (sknn_graph / sknn_graph.sum()).tocsr()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -253,10 +226,7 @@
     "    tsne_data_list.append(tsne_data)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -286,10 +256,7 @@
     "            facecolor='white')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -311,10 +278,7 @@
     "print(\"{:.2E}\".format(norms.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -323,10 +287,7 @@
     "## UMAP"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -344,16 +305,57 @@
     "    pca_umap = pca2"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: graph_ must be None if supervision is used in fit_transform or if UMAP models are added,             multiplied or substracted or if densmap or output_dens are True.\n",
+      "UMAP(a=1.0, b=1.0, dens_frac=0.0, dens_lambda=0.0,\n",
+      "     init=array([[-0.42984614,  1.07351258],\n",
+      "       [-0.36339734, -0.8884654 ],\n",
+      "       [ 1.55993578, -0.4130965 ],\n",
+      "       ...,\n",
+      "       [-0.63591425, -0.1464273 ],\n",
+      "       [-0.43961601, -0.30839183],\n",
+      "       [-0.33116   , -0.84751786]]),\n",
+      "     log_embeddings=True, n_epochs=750, random_state=2, verbose=True)\n",
+      "Construct fuzzy simplicial set\n",
+      "Fri Nov 18 11:40:49 2022 Construct embedding\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/export/data/sdamrich/anaconda3/envs/nce/lib/python3.8/site-packages/sklearn/base.py:209: FutureWarning: From version 0.24, get_params will raise an AttributeError if a parameter cannot be retrieved as an instance attribute. Previously it would return None.\n",
+      "  warnings.warn('From version 0.24, get_params will raise an '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tcompleted  0  /  750 epochs\n",
+      "\tcompleted  75  /  750 epochs\n",
+      "\tcompleted  150  /  750 epochs\n",
+      "\tcompleted  225  /  750 epochs\n",
+      "\tcompleted  300  /  750 epochs\n",
+      "\tcompleted  375  /  750 epochs\n",
+      "\tcompleted  450  /  750 epochs\n",
+      "\tcompleted  525  /  750 epochs\n",
+      "\tcompleted  600  /  750 epochs\n",
+      "\tcompleted  675  /  750 epochs\n",
+      "Fri Nov 18 11:53:06 2022 Finished embedding\n"
+     ]
+    }
+   ],
    "source": [
     "filename = os.path.join(root_path, dataset, f\"umap_bin_k_{k}_n_epochs_{n_epochs}_lr_{lr}_seed_{seed}_a_{a}_b_{b}_init_pca_rescaled_{rescale_umap}.pkl\")\n",
     "try:\n",
@@ -367,8 +369,8 @@
     "                        a=a,\n",
     "                        b=b,\n",
     "                        log_embeddings=True,\n",
-    "                        log_norm=True,\n",
-    "                        log_kl=True,\n",
+    "                        log_norm=False,\n",
+    "                        log_kl=False,\n",
     "                        random_state=seed,\n",
     "                        verbose=True,\n",
     "                        init=pca_umap,\n",
@@ -379,10 +381,7 @@
     "        pickle.dump(umapper, file, pickle.HIGHEST_PROTOCOL)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -413,10 +412,7 @@
     "            facecolor=\"white\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -425,10 +421,7 @@
     "## NCVis"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -447,10 +440,7 @@
     "affinities = np.stack([sknn_graph.row, sknn_graph.col], axis=1)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -494,22 +484,7 @@
     "    ncvis_list.append(ncvis_data)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -538,10 +513,7 @@
     "            facecolor=\"white\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -555,10 +527,7 @@
     "                 len(x) - 1)  # rescale with noise distribution\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -579,10 +548,7 @@
     "print(\"{:.2E}\".format(norms.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -603,10 +569,7 @@
     "print(\"{:.2E}\".format(zs.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -617,10 +580,7 @@
     "_, counts = np.unique(y, return_counts=True)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -640,10 +600,7 @@
     "counts"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -652,10 +609,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
