--- a/notebooks/human_tsne_ncvis_umap.ipynb
+++ b/notebooks/human_tsne_ncvis_umap.ipynb
@@ -8,14 +8,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "env: CUDA_VISIBLE_DEVICES=1\n"
+      "env: CUDA_VISIBLE_DEVICES=0\n"
      ]
     }
    ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "%env CUDA_VISIBLE_DEVICES=1\n",
+    "%env CUDA_VISIBLE_DEVICES=0\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
     "\n",
@@ -35,15 +35,12 @@
     "import ncvis"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# set up matplotlib\n",
@@ -53,30 +50,24 @@
     "cmap = matplotlib.cm.get_cmap(\"tab10\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "root_path = get_path(\"data\")\n",
     "fig_path = get_path(\"figures\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "dataset = \"human-409b2\"\n",
@@ -87,10 +78,7 @@
     "b = 1.0"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -113,10 +101,7 @@
     "x.shape"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -125,10 +110,7 @@
     "# t-SNE"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -155,22 +137,7 @@
     "affinities_tSNE.P = (sknn_graph / sknn_graph.sum()).tocsr()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -205,10 +172,7 @@
     "    tsne_data_list.append(tsne_data)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -238,10 +202,7 @@
     "            facecolor='white')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -252,10 +213,7 @@
     "norms = np.array([float(tsne_data[\"Zs\"][-1].cpu().numpy()) for tsne_data in tsne_data_list])"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -276,10 +234,7 @@
     "print(\"{:.2E}\".format(norms.std()))\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -288,15 +243,12 @@
     "# UMAP"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "lr = 1.0\n",
@@ -309,16 +261,57 @@
     "    pca_umap = pca2"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: graph_ must be None if supervision is used in fit_transform or if UMAP models are added,             multiplied or substracted or if densmap or output_dens are True.\n",
+      "UMAP(a=1.0, b=1.0, dens_frac=0.0, dens_lambda=0.0,\n",
+      "     init=array([[ 1.32412654, -0.80225011],\n",
+      "       [ 1.63249332, -0.81213574],\n",
+      "       [ 1.49116736, -0.81759292],\n",
+      "       ...,\n",
+      "       [-1.08435838, -0.31130759],\n",
+      "       [-1.37428608, -0.18926497],\n",
+      "       [-0.04110873,  1.3485204 ]]),\n",
+      "     log_embeddings=True, n_epochs=750, random_state=2, verbose=True)\n",
+      "Construct fuzzy simplicial set\n",
+      "Fri Nov 18 11:23:18 2022 Construct embedding\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/export/data/sdamrich/anaconda3/envs/nce/lib/python3.8/site-packages/sklearn/base.py:209: FutureWarning: From version 0.24, get_params will raise an AttributeError if a parameter cannot be retrieved as an instance attribute. Previously it would return None.\n",
+      "  warnings.warn('From version 0.24, get_params will raise an '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tcompleted  0  /  750 epochs\n",
+      "\tcompleted  75  /  750 epochs\n",
+      "\tcompleted  150  /  750 epochs\n",
+      "\tcompleted  225  /  750 epochs\n",
+      "\tcompleted  300  /  750 epochs\n",
+      "\tcompleted  375  /  750 epochs\n",
+      "\tcompleted  450  /  750 epochs\n",
+      "\tcompleted  525  /  750 epochs\n",
+      "\tcompleted  600  /  750 epochs\n",
+      "\tcompleted  675  /  750 epochs\n",
+      "Fri Nov 18 11:25:58 2022 Finished embedding\n"
+     ]
+    }
+   ],
    "source": [
     "filename = os.path.join(root_path, dataset, f\"umap_bin_k_{k}_n_epochs_{n_epochs}_lr_{lr}_seed_{seed}_a_{a}_b_{b}_init_pca_rescaled_{rescale_umap}.pkl\")\n",
     "try:\n",
@@ -332,8 +325,8 @@
     "                        a=a,\n",
     "                        b=b,\n",
     "                        log_embeddings=True,\n",
-    "                        log_norm=True,\n",
-    "                        log_kl=True,\n",
+    "                        log_norm=False,\n",
+    "                        log_kl=False,\n",
     "                        random_state=seed,\n",
     "                        verbose=True,\n",
     "                        init=pca_umap,\n",
@@ -344,10 +337,7 @@
     "        pickle.dump(umapper, file, pickle.HIGHEST_PROTOCOL)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -378,10 +368,7 @@
     "            facecolor=\"white\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -390,10 +377,7 @@
     "# NCVis"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -412,10 +396,7 @@
     "affinities = np.stack([sknn_graph.row, sknn_graph.col], axis=1)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -459,10 +440,7 @@
     "    ncvis_list.append(ncvis_data)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -491,10 +469,7 @@
     "            facecolor=\"white\")\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -506,10 +481,7 @@
     "zs = np.array([np.exp(ncvis_data[\"qs\"][-1]) for ncvis_data in ncvis_list])* len(x) * (len(x)-1) # rescale with noise distribution"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -530,10 +502,7 @@
     "print(\"{:.2E}\".format(norms.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -554,10 +523,7 @@
     "print(\"{:.2E}\".format(zs.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -566,10 +532,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
