--- a/notebooks/k49_tsne_ncvis_umap.ipynb
+++ b/notebooks/k49_tsne_ncvis_umap.ipynb
@@ -36,10 +36,7 @@
     "from firelight.visualizers.colorization import get_distinct_colors"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -51,15 +48,12 @@
     "fig_path = get_path(\"figures\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# parameters for all methods\n",
@@ -73,15 +67,12 @@
     "dataset = \"k49\""
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "plt.style.use(\"default\")\n",
@@ -91,15 +82,12 @@
     "cmap = matplotlib.cm.get_cmap(\"tab10\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -115,15 +103,12 @@
     "print(x.shape)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "np.random.seed(0)\n",
@@ -132,21 +117,18 @@
     "cmap = matplotlib.colors.ListedColormap(colors)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:>"
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -166,24 +148,16 @@
     "plot_scatter(plt.gca(),pca2_rescaled, y, cmap=cmap)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
     "## tsne"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -210,10 +184,7 @@
     "affinities_tSNE.P = (sknn_graph / sknn_graph.sum()).tocsr()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -248,10 +219,7 @@
     "    tsne_data_list.append(tsne_data)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -281,10 +249,7 @@
     "            facecolor='white')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -306,10 +271,7 @@
     "print(\"{:.2E}\".format(norms.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -318,10 +280,7 @@
     "## UMAP"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -339,16 +298,57 @@
     "    pca_umap = pca2"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: graph_ must be None if supervision is used in fit_transform or if UMAP models are added,             multiplied or substracted or if densmap or output_dens are True.\n",
+      "UMAP(a=1.0, b=1.0, dens_frac=0.0, dens_lambda=0.0,\n",
+      "     init=array([[-0.89106087, -0.51540416],\n",
+      "       [-0.49299043,  0.79320232],\n",
+      "       [-0.30587392,  0.10756886],\n",
+      "       ...,\n",
+      "       [ 1.643058  , -0.21614712],\n",
+      "       [ 0.11841489, -0.75490449],\n",
+      "       [-0.17196362, -0.62375762]]),\n",
+      "     log_embeddings=True, n_epochs=750, random_state=2, verbose=True)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/export/data/sdamrich/anaconda3/envs/nce/lib/python3.8/site-packages/sklearn/base.py:209: FutureWarning: From version 0.24, get_params will raise an AttributeError if a parameter cannot be retrieved as an instance attribute. Previously it would return None.\n",
+      "  warnings.warn('From version 0.24, get_params will raise an '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Construct fuzzy simplicial set\n",
+      "Fri Nov 18 12:05:47 2022 Construct embedding\n",
+      "\tcompleted  0  /  750 epochs\n",
+      "\tcompleted  75  /  750 epochs\n",
+      "\tcompleted  150  /  750 epochs\n",
+      "\tcompleted  225  /  750 epochs\n",
+      "\tcompleted  300  /  750 epochs\n",
+      "\tcompleted  375  /  750 epochs\n",
+      "\tcompleted  450  /  750 epochs\n",
+      "\tcompleted  525  /  750 epochs\n",
+      "\tcompleted  600  /  750 epochs\n",
+      "\tcompleted  675  /  750 epochs\n",
+      "Fri Nov 18 12:49:12 2022 Finished embedding\n"
+     ]
+    }
+   ],
    "source": [
     "filename = os.path.join(root_path, dataset, f\"umap_bin_k_{k}_n_epochs_{n_epochs}_lr_{lr}_seed_{seed}_a_{a}_b_{b}_init_pca_rescaled_{rescale_umap}.pkl\")\n",
     "try:\n",
@@ -362,8 +362,8 @@
     "                        a=a,\n",
     "                        b=b,\n",
     "                        log_embeddings=True,\n",
-    "                        log_norm=True,\n",
-    "                        log_kl=True,\n",
+    "                        log_norm=False,\n",
+    "                        log_kl=False,\n",
     "                        random_state=seed,\n",
     "                        verbose=True,\n",
     "                        init=pca_umap,\n",
@@ -374,10 +374,7 @@
     "        pickle.dump(umapper, file, pickle.HIGHEST_PROTOCOL)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -408,10 +405,7 @@
     "            facecolor=\"white\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -420,10 +414,7 @@
     "## NCVis"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -442,10 +433,7 @@
     "affinities = np.stack([sknn_graph.row, sknn_graph.col], axis=1)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -489,10 +477,7 @@
     "    ncvis_list.append(ncvis_data)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -501,10 +486,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -533,10 +515,7 @@
     "            facecolor=\"white\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -550,10 +529,7 @@
     "                 len(x) - 1)  # rescale with noise distribution\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -574,10 +550,7 @@
     "print(\"{:.2E}\".format(norms.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -598,10 +571,7 @@
     "print(\"{:.2E}\".format(zs.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -612,10 +582,7 @@
     "_, counts = np.unique(y, return_counts=True)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -635,10 +602,7 @@
     "counts"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -647,10 +611,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
