--- a/notebooks/ncvis.ipynb
+++ b/notebooks/ncvis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "root_path = get_path(\"data\")\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# parameters for all methods\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# set up matplotlib\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# get data\n",
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "outputs": [],
    "source": [
     "clamp_low = 1e-10\n",
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 74,
    "outputs": [
     {
      "name": "stdout",
@@ -381,6 +381,9 @@
     "n_epochs = 750\n",
     "\n",
     "embedders = []\n",
+    "recalls = []\n",
+    "s_corrs = []\n",
+    "\n",
     "init = \"pca\"\n",
     "\n",
     "for n_noise in nbs_noise:\n",
@@ -392,7 +395,27 @@
     "        embedder = pickle.load(file)\n",
     "\n",
     "    embedders.append(embedder)\n",
-    "    print(f\"done with n_noise={n_noise}\")"
+    "\n",
+    "    file_name_recall = os.path.join(root_path,\n",
+    "                                                dataset,f\"cne_nce_n_noise_{n_noise}_n_epochs_{n_epochs}_init_{init}_rescale_{rescale}_bs_{batch_size}\"                                                f\"_optim_{optimizer}_anneal_lr_{anneal_lr}_lr_min_factor_{lr_min_factor}_momentum_{momentum}_param_{parametric}_clamp_low_{clamp_low}_recall.pkl\"\n",
+    "                                                )\n",
+    "    with open(file_name_recall, \"rb\") as file:\n",
+    "        recall_dict = pickle.load(file)\n",
+    "    recalls.append(recall_dict[\"recalls\"])\n",
+    "\n",
+    "    file_name_s_corrs = os.path.join(root_path,\n",
+    "                                     dataset,f\"cne_nce_n_noise_{n_noise}_n_epochs_{n_epochs}_init_{init}_rescale_{rescale}_bs_{batch_size}\"                                                f\"_optim_{optimizer}_anneal_lr_{anneal_lr}_lr_min_factor_{lr_min_factor}_momentum_{momentum}_param_{parametric}_clamp_low_{clamp_low}_s_corr.pkl\"\n",
+    "                                     )\n",
+    "    with open(file_name_s_corrs, \"rb\") as file:\n",
+    "        s_corrs_dict = pickle.load(file)\n",
+    "    s_corrs.append(s_corrs_dict[\"s_corrs\"])\n",
+    "\n",
+    "\n",
+    "\n",
+    "    print(f\"done with n_noise={n_noise}\")\n",
+    "\n",
+    "recalls = np.stack(recalls)\n",
+    "s_corrs = np.stack(s_corrs)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -403,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 75,
    "outputs": [
     {
      "data": {
@@ -433,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 76,
    "outputs": [],
    "source": [
     "epoch = -1\n",
@@ -441,6 +464,9 @@
     "    plt.figure(figsize=(5,5))\n",
     "    embd = embedders[i].callback.embds[epoch]\n",
     "    plot_scatter(plt.gca(), embd, y)\n",
+    "    plt.text(0.8, 0.8, rf\"kNN: $\\:\\: {recalls[i].mean():.2f}$\"+\"\\n\"\n",
+    "                       rf\"Spear: {s_corrs[i].mean():.2f}\",\n",
+    "             transform=plt.gca().transAxes, fontsize=20)\n",
     "    plt.savefig(os.path.join(fig_path,\n",
     "                         f\"nce_no_EE_m_{nbs_noise[i]}.png\"),\n",
     "            bbox_inches='tight',\n",
@@ -471,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 77,
    "outputs": [],
    "source": [
     "# early exaggeration phase\n",
@@ -495,13 +521,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:>"
      },
-     "execution_count": 23,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -529,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "outputs": [
     {
      "name": "stdout",
@@ -547,6 +573,8 @@
     "n_epochs = 500\n",
     "init = \"EE\"\n",
     "embedders = []\n",
+    "recalls = []\n",
+    "s_corrs = []\n",
     "\n",
     "for n_noise in nbs_noise:\n",
     "    file_name = os.path.join(root_path,\n",
@@ -557,7 +585,27 @@
     "        embedder = pickle.load(file)\n",
     "\n",
     "    embedders.append(embedder)\n",
-    "    print(f\"done with n_noise={n_noise}\")"
+    "\n",
+    "    file_name_recall = os.path.join(root_path,\n",
+    "                                            dataset,f\"cne_nce_n_noise_{n_noise}_n_epochs_{n_epochs}_init_{init}_bs_{batch_size}\"                                                f\"_optim_{optimizer}_anneal_lr_{anneal_lr}_lr_min_factor_{lr_min_factor}_momentum_{momentum}_param_{parametric}_clamp_low_{clamp_low}_recall.pkl\"\n",
+    "                                            )\n",
+    "    with open(file_name_recall, \"rb\") as file:\n",
+    "        recall_dict = pickle.load(file)\n",
+    "    recalls.append(recall_dict[\"recalls\"])\n",
+    "\n",
+    "    file_name_s_corrs = os.path.join(root_path,\n",
+    "                                     dataset,f\"cne_nce_n_noise_{n_noise}_n_epochs_{n_epochs}_init_{init}_bs_{batch_size}\"                                                f\"_optim_{optimizer}_anneal_lr_{anneal_lr}_lr_min_factor_{lr_min_factor}_momentum_{momentum}_param_{parametric}_clamp_low_{clamp_low}_s_corr.pkl\"\n",
+    "                                     )\n",
+    "    with open(file_name_s_corrs, \"rb\") as file:\n",
+    "        s_corrs_dict = pickle.load(file)\n",
+    "    s_corrs.append(s_corrs_dict[\"s_corrs\"])\n",
+    "\n",
+    "\n",
+    "\n",
+    "    print(f\"done with n_noise={n_noise}\")\n",
+    "\n",
+    "recalls = np.stack(recalls)\n",
+    "s_corrs = np.stack(s_corrs)"
    ],
    "metadata": {
     "collapsed": false,
@@ -568,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "outputs": [
     {
      "data": {
@@ -598,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 81,
    "outputs": [],
    "source": [
     "epoch = -1\n",
@@ -606,6 +654,9 @@
     "    plt.figure(figsize=(5,5))\n",
     "    embd = embedders[i].callback.embds[epoch]\n",
     "    plot_scatter(plt.gca(), embd, y)\n",
+    "    plt.text(0.8, 0.8, rf\"kNN: $\\:\\: {recalls[i].mean():.2f}$\"+\"\\n\"\n",
+    "                       rf\"Spear: {s_corrs[i].mean():.2f}\",\n",
+    "             transform=plt.gca().transAxes, fontsize=20)\n",
     "    plt.savefig(os.path.join(fig_path,\n",
     "                         f\"nce_m_{nbs_noise[i]}.png\"),\n",
     "            bbox_inches='tight',\n",
@@ -636,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 82,
    "outputs": [
     {
      "name": "stdout",
@@ -654,6 +705,8 @@
     "\n",
     "init = \"random\"\n",
     "embedders = []\n",
+    "recalls = []\n",
+    "s_corrs = []\n",
     "\n",
     "for n_noise in nbs_noise:\n",
     "    file_name = os.path.join(root_path,\n",
@@ -664,7 +717,26 @@
     "        embedder = pickle.load(file)\n",
     "\n",
     "    embedders.append(embedder)\n",
-    "    print(f\"done with n_noise={n_noise}\")"
+    "    file_name_recall = os.path.join(root_path,\n",
+    "                                            dataset,f\"cne_nce_n_noise_{n_noise}_n_epochs_{n_epochs}_init_{init}_rescale_{1.0}_bs_{batch_size}\"                                                f\"_optim_{optimizer}_anneal_lr_{anneal_lr}_lr_min_factor_{lr_min_factor}_momentum_{momentum}_param_{parametric}_clamp_low_{clamp_low}_recall.pkl\"\n",
+    "                                            )\n",
+    "    with open(file_name_recall, \"rb\") as file:\n",
+    "        recall_dict = pickle.load(file)\n",
+    "    recalls.append(recall_dict[\"recalls\"])\n",
+    "\n",
+    "    file_name_s_corrs = os.path.join(root_path,\n",
+    "                                     dataset,f\"cne_nce_n_noise_{n_noise}_n_epochs_{n_epochs}_init_{init}_rescale_{1.0}_bs_{batch_size}\"                                                f\"_optim_{optimizer}_anneal_lr_{anneal_lr}_lr_min_factor_{lr_min_factor}_momentum_{momentum}_param_{parametric}_clamp_low_{clamp_low}_s_corr.pkl\"\n",
+    "                                     )\n",
+    "    with open(file_name_s_corrs, \"rb\") as file:\n",
+    "        s_corrs_dict = pickle.load(file)\n",
+    "    s_corrs.append(s_corrs_dict[\"s_corrs\"])\n",
+    "\n",
+    "\n",
+    "\n",
+    "    print(f\"done with n_noise={n_noise}\")\n",
+    "\n",
+    "recalls = np.stack(recalls)\n",
+    "s_corrs = np.stack(s_corrs)"
    ],
    "metadata": {
     "collapsed": false,
@@ -675,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 83,
    "outputs": [
     {
      "data": {
@@ -705,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "outputs": [],
    "source": [
     "epoch = -1\n",
@@ -713,6 +785,9 @@
     "    plt.figure(figsize=(5,5))\n",
     "    embd = embedders[i].callback.embds[epoch]\n",
     "    plot_scatter(plt.gca(), embd, y)\n",
+    "    plt.text(0.8, 0.8, rf\"kNN: $\\:\\: {recalls[i].mean():.2f}$\"+\"\\n\"\n",
+    "                       rf\"Spear: {s_corrs[i].mean():.2f}\",\n",
+    "             transform=plt.gca().transAxes, fontsize=20)\n",
     "    plt.savefig(os.path.join(fig_path,\n",
     "                         f\"nce_random_m_{nbs_noise[i]}.png\"),\n",
     "            bbox_inches='tight',\n",
