--- a/notebooks/imba_mnist_tsne_ncvis_umap.ipynb
+++ b/notebooks/imba_mnist_tsne_ncvis_umap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -10,14 +10,14 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n",
-      "env: CUDA_VISIBLE_DEVICES=1\n"
+      "env: CUDA_VISIBLE_DEVICES=0\n"
      ]
     }
    ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "%env CUDA_VISIBLE_DEVICES=1\n",
+    "%env CUDA_VISIBLE_DEVICES=0\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
     "\n",
@@ -37,30 +37,24 @@
     "import ncvis"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "root_path = get_path(\"data\")\n",
     "fig_path = get_path(\"figures\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# parameters for all methods\n",
@@ -73,15 +67,12 @@
     "k = 15\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "plt.style.use(\"default\")\n",
@@ -91,10 +82,7 @@
     "cmap = matplotlib.cm.get_cmap(\"tab10\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -103,10 +91,7 @@
     "# Odd digits downsamples"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -117,10 +102,7 @@
     "dataset = \"imba_mnist_odd_seed_0\""
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -141,10 +123,7 @@
     "print(x.shape)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -164,10 +143,7 @@
     "print(counts)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -198,24 +174,16 @@
     "plot_scatter(plt.gca(),pca2_rescaled, y)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 52,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
     "## tsne"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -242,10 +210,7 @@
     "affinities_tSNE.P = (sknn_graph / sknn_graph.sum()).tocsr()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -280,10 +245,7 @@
     "    tsne_data_list.append(tsne_data)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -313,10 +275,7 @@
     "            facecolor='white')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -338,10 +297,7 @@
     "print(\"{:.2E}\".format(norms.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -350,10 +306,7 @@
     "## UMAP"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -371,10 +324,7 @@
     "    pca_umap = pca2"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -406,10 +356,7 @@
     "        pickle.dump(umapper, file, pickle.HIGHEST_PROTOCOL)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -440,10 +387,7 @@
     "            facecolor=\"white\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -452,10 +396,7 @@
     "## NCVis"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -474,10 +415,7 @@
     "affinities = np.stack([sknn_graph.row, sknn_graph.col], axis=1)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -521,10 +459,7 @@
     "    ncvis_list.append(ncvis_data)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -533,10 +468,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -565,10 +497,7 @@
     "            facecolor=\"white\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -582,10 +511,7 @@
     "                 len(x) - 1)  # rescale with noise distribution\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -606,10 +532,7 @@
     "print(\"{:.2E}\".format(norms.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -630,10 +553,7 @@
     "print(\"{:.2E}\".format(zs.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -642,30 +562,24 @@
     "# Linear downsampling"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "execution_count": 27
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "dataset = \"imba_mnist_lin_seed_0\""
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -681,15 +595,12 @@
     "print(x.shape)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -704,21 +615,18 @@
     "print(counts)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:>"
      },
-     "execution_count": 69,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -738,10 +646,7 @@
     "plot_scatter(plt.gca(),pca2_rescaled, y)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -750,10 +655,7 @@
     "## t-sne"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "execution_count": 29
   },
@@ -781,10 +683,7 @@
     "affinities_tSNE.P = (sknn_graph / sknn_graph.sum()).tocsr()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -819,10 +718,7 @@
     "    tsne_data_list.append(tsne_data)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -852,10 +748,7 @@
     "            facecolor='white')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -877,10 +770,7 @@
     "print(\"{:.2E}\".format(norms.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -889,15 +779,12 @@
     "## UMAP"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "lr = 1.0\n",
@@ -910,16 +797,57 @@
     "    pca_umap = pca2"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "outputs": [],
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: graph_ must be None if supervision is used in fit_transform or if UMAP models are added,             multiplied or substracted or if densmap or output_dens are True.\n",
+      "UMAP(a=1.0, b=1.0, dens_frac=0.0, dens_lambda=0.0,\n",
+      "     init=array([[ 1.0315627 ,  0.15778662],\n",
+      "       [ 1.7670525 , -0.3057745 ],\n",
+      "       [ 0.8486204 ,  0.04368591],\n",
+      "       ...,\n",
+      "       [ 0.33459392,  1.0544695 ],\n",
+      "       [-0.7426205 ,  0.18759562],\n",
+      "       [-0.10026008,  1.445437  ]], dtype=float32),\n",
+      "     log_embeddings=True, n_epochs=750, random_state=2, verbose=True)\n",
+      "Construct fuzzy simplicial set\n",
+      "Fri Nov 18 11:26:30 2022 Construct embedding\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/export/data/sdamrich/anaconda3/envs/nce/lib/python3.8/site-packages/sklearn/base.py:209: FutureWarning: From version 0.24, get_params will raise an AttributeError if a parameter cannot be retrieved as an instance attribute. Previously it would return None.\n",
+      "  warnings.warn('From version 0.24, get_params will raise an '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tcompleted  0  /  750 epochs\n",
+      "\tcompleted  75  /  750 epochs\n",
+      "\tcompleted  150  /  750 epochs\n",
+      "\tcompleted  225  /  750 epochs\n",
+      "\tcompleted  300  /  750 epochs\n",
+      "\tcompleted  375  /  750 epochs\n",
+      "\tcompleted  450  /  750 epochs\n",
+      "\tcompleted  525  /  750 epochs\n",
+      "\tcompleted  600  /  750 epochs\n",
+      "\tcompleted  675  /  750 epochs\n",
+      "Fri Nov 18 11:31:35 2022 Finished embedding\n"
+     ]
+    }
+   ],
    "source": [
     "filename = os.path.join(root_path, dataset, f\"umap_bin_k_{k}_n_epochs_{n_epochs}_lr_{lr}_seed_{seed}_a_{a}_b_{b}_init_pca_rescaled_{rescale_umap}.pkl\")\n",
     "try:\n",
@@ -933,8 +861,8 @@
     "                        a=a,\n",
     "                        b=b,\n",
     "                        log_embeddings=True,\n",
-    "                        log_norm=True,\n",
-    "                        log_kl=True,\n",
+    "                        log_norm=False,\n",
+    "                        log_kl=False,\n",
     "                        random_state=seed,\n",
     "                        verbose=True,\n",
     "                        init=pca_umap,\n",
@@ -945,10 +873,7 @@
     "        pickle.dump(umapper, file, pickle.HIGHEST_PROTOCOL)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -979,10 +904,7 @@
     "            facecolor=\"white\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -991,10 +913,7 @@
     "## NCVis"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1013,10 +932,7 @@
     "affinities = np.stack([sknn_graph.row, sknn_graph.col], axis=1)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1060,10 +976,7 @@
     "    ncvis_list.append(ncvis_data)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1092,10 +1005,7 @@
     "            facecolor=\"white\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1109,10 +1019,7 @@
     "                 len(x) - 1)  # rescale with noise distribution\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1133,10 +1040,7 @@
     "print(\"{:.2E}\".format(norms.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1157,10 +1061,7 @@
     "print(\"{:.2E}\".format(zs.std()))"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1169,10 +1070,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
